# stidgen.rs

./: .editorconfig  Cargo.toml  LICENSE.md  Readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  ci.yml
playground/: Cargo.toml
playground/src/: main.rs
stidgen/: Cargo.toml
stidgen/src/: impls.rs  known_types.rs  lib.rs  options.rs  type_match.rs
stidgen/tests/: as_ref.rs  borrow.rs  clippy.rs  clone.rs  debug.rs  display.rs  eq.rs  eq_ord.rs  macrotest.rs  marker_traits.rs  name_shadow.rs  new.rs
stidgen/tests/expand/: string_custom.expanded.rs  string_custom.rs  string_default.expanded.rs  string_default.rs  string_defaults.expanded.rs  string_nodefaults.expanded.rs  string_nodefaults.rs
stidgen_derive/: Cargo.toml
stidgen_derive/src/: lib.rs
