[package]
name = "stidgen"
version = "0.1.0"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
static_assertions = "1.1.0"
