[package]
name = "stidgen"
version = "0.1.1"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
edition = "2018"
rust-version = "1.38"
description = "Strongly Typed ID types macro"
readme = "../Readme.md"
homepage = "https://github.com/vbfox/stidgen.rs"
repository = "https://github.com/vbfox/stidgen.rs"
license = "MIT"
keywords = ["rust-patterns", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
once_cell = "1.5.2"
thiserror = "1.0"

[dev-dependencies]
static_assertions = "1.1.0"
macrotest = "1"

[[test]]
name = "macrotest"
test = false
